# Capacitor-nodejs-sherpa-onnx-senseVoice-gensrt

./: .gitignore  README.md  README.simple.md  biome.json  buildapk.sh  capacitor.config.json  eslint.config.js  package-lock.json  package.json
android/: capacitor.settings.gradle  variables.gradle
android/app/: build.gradle  capacitor.build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/sensevoicegensrtnode/app/: MainActivity.java
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: network_security_config.xml
capacitor-nodejs/: package-lock.json  package.json
capacitor-nodejs/android/: .project  CMakeLists.txt  build.gradle
capacitor-nodejs/assets/types/: bridge.tgz
node-addon-api/: CMakeLists.txt  README.md  buildnode.sh  package-lock.json  package.json
node-addon-api/FFmpeg/include/libavutil/: ffversion.h
node-addon-api/FFmpeg/lib/pkgconfig/: dav1d.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
node-addon-api/lib/: addon.js  extract-audio-to-pcm.js  sherpa-onnx.js  srt-writer.js
node-addon-api/sherpa-onnx-c-api-onnxruntime/lib/: a.out
node-addon-api/src/: extract-audio-to-pcm.cc  sherpa-onnx-node-addon-api.cc  srt-writer.cc
src/: index.html  index.html.bak
src/js/: app.js  app.js.bak
static/nodejs/: package-lock.json  package.json  progress_tracker.js  server.js  server.js.bak  v8_memory.js
static/nodejs/sherpa-onnx-node/: a.out  addon-static-import.js  addon.js  audio-tagg.js  extract-audio-to-pcm.js  extract-mp4-to-pcm.js  keyword-spotter.js  non-streaming-asr.js  non-streaming-speaker-diarization.js  non-streaming-speech-denoiser.js  non-streaming-tts.js  package.json  punctuation.js  sherpa-onnx.js  speaker-identification.js  spoken-language-identification.js  srt-writer.js  streaming-asr.js  types.js  vad.js
static/nodejs/sherpa-onnx-node/pkgconfig/: libavcodec.pc
